[package]
name = "desc_graf_rocket"
version = "0.1.0"
edition = "2021"


[dependencies]
bitcoincore-rpc = "0.18.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.20"
env_logger = "0.10.1"
rocket = "0.5.0-rc.1"

anyhow = "1.0.77"
crossterm = "0.27.0"
tokio = { version = "1", features = ["full"] }
